# QTIA_backtest

./: .gitignore  CMakeLists.txt  DataDefs.hpp  README.md  TODO.md  backtestconfig.yaml  debug.sh  env.sh  feather2csv.py  main.cpp  make.sh  make_Test.sh
Backtest/: CMakeLists.txt  README.md
Backtest/Common/: apiconfig.json  backtestconfig.yaml
Backtest/Include/: BtRunner.h  HisDataReplayer.h  Utils.h
Backtest/Include/Constant/: Marco.h
Backtest/Include/Constants/: Enum.h  Marco.h
Backtest/Include/Data/: Orderbook.h
Backtest/Include/Trade/: Exchange.h  Instrument.h
Backtest/Include/Utils/: Logger.h  StrUtils.h
Backtest/Source/: BtRunner.cpp
Database/: CMakeLists.txt  README.md
Database/Include/: ClickHouse.h  DBClient.h  ParquetDB.h
Matcher/: CMakeLists.txt  README.md
Matcher/Include/: OrderQueue.h  SimpleMatcher.h  TradePublisher.h
Matcher/Source/: OrderQueue.cpp  SimpleMatcher.cpp  TradePublisher.cpp
OrdMgr/: CMakeLists.txt  README.md
OrdMgr/Include/: OrdMgr.h
OrdMgr/Source/: OrdMgr.cpp
PosMgr/: README.md
PosMgr/Include/: PosMgr.h
Public/: README.md
Public/Include/: DataLoader.h  Enum.h  Exchange.h  IncrementalOrderbook.h  Instrument.h  Logger.h  Marco.h  Observer.h  Orderbook.h  Protocol.h
Public/Include/BaseClass/: Subscriber.h
Public/Include/Constant/: Constexpr.h  Enum.h  README.md  Using.h
Public/Include/DataStructure/: Asset.h  MarketData.h  Order.h  Pnl.h  Position.h  Symbol.h  Trade.h
Public/Include/Utils/: README.md
Replayer/: CMakeLists.txt  HisDataReplayer.h  README.md
Replayer/Include/: CsvLoader.h  EventGenerator.h  EventPublisher.h  MDCache.h  MDLoader.h  MDPublisher.h  Runner.h
Replayer/Source/: CsvLoader.cpp  EventPublisher.cpp  MDCache.cpp  MDLoader.cpp  MDPublisher.cpp
Statistic/Include/: PnlCalculator.h
Statistic/Source/: PnlCalculator.cpp
Strategy/: CMakeLists.txt  README.md
Strategy/Include/: Strategy.h  StrategyBase.h
Strategy/Source/: StrategyBase.cpp
Test/: CMakeLists.txt  main.cpp
Test/config/: backtestconfig.yaml  logger.yaml
ToolKit/: CMakeLists.txt  README.md
ToolKit/Include/: CsvLoader.h  Logger.h  StringUtils.h  TimeUtils.h
ToolKit/Source/: CsvLoader.cpp  Logger.cpp  TimeUtils.cpp
backtest/include/: utils.h
backtest/include/Data/: Orderbook.h
backtest/include/Trade/: Exchange.h  Instrument.h
backtest/include/constants/: enum.h  marco.h
backtest/include/market_types/: market_data_types.h
backtest/include/trade_types/: exchange_type.h  instrument_type.h
cmake/: README.md  arrow.cmake  clickhouse-cpp.cmake  config.cmake  fmt.cmake  jemalloc.cmake  magic_enum.cmake  spdlog.cmake  yaml-cpp.cmake
src/market_types/: market_data_types.h
